[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-red-black-tree"
version = "1.0.1"
description = "High-performance red-black tree implementation in C with Python bindings"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["rbtree", "red-black-tree", "data-structures", "tree", "binary-search-tree"]
authors = [
    {name = "Vinícius Yuji Guima", email = "viyugui@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
]

[project.urls]
Homepage = "https://github.com/viniyuji/py-rbtree"
Repository = "https://github.com/viniyuji/py-rbtree"
Issues = "https://github.com/viniyuji/py-rbtree/issues"
